[project]
name = "quant-finance-papers"
version = "0.1.0"
description = "Quantitative finance research and risk contribution decomposition"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "msal>=1.20.0",
    "duckdb>=0.8.0",
    "requests>=2.28.0",
    "plotly>=5.14.0",
    "cvxpy>=1.3.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pysrc"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
